# audio-guesser

./: Dockerfile  LICENCE  README.md  bootstrap.sh
.github/workflows/: ci.yml
audio-guesser-frontend/: angular.json  package.json
audio-guesser-frontend/src/: index.html
audio-guesser-frontend/src/app/: app.component.html  app.component.scss
backend/: Cargo.toml  README.md
backend/src/: api.rs  config.rs  lib.rs  main.rs
backend/xtask/: Cargo.toml
backend/xtask/src/: main.rs
docs/: design-document.md
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/audio-guesser-frontend/: README.md
frontend/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts  audio-recording.service.ts  recording-data-transfer.service.ts
